# agenta

./: .gitattributes  .gitignore  AGENTS.md  README.md  UI_DESIGN.md  UI_STYLE.md  agenta.example.yaml  index.html  package.json  preview.html
.agenta/: feedback.md  project.yaml
.serena/: project.yml
dev_docs/: README.md  architecture.md  baseline.md  cli-mcp-quickstart.md  dependency-policy.md  deps_build.md  implementation-plan.md  migration_plan.md  tech.md
docs/: agent-workflow-installation.md  cli-mcp-quickstart.md  cli-reference.md  search-v2-release.md  v0.1.2-release.md  v0.1.3-release.md
scripts/: release.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_sync_foundation.sql  0003_task_relations.sql  0004_task_context_retrieval_fields.sql  0005_search_vector_jobs.sql  0006_activity_search_text.sql  0007_activity_chunks.sql  0008_search_index_observability.sql  0009_sync_auto_conflicts.sql  0010_search_index_incremental_metadata.sql
src-tauri/src/: build_info.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: config.rs  error_log.rs  mcp.rs  mod.rs  runtime.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/interface/: cli.rs  mcp.rs  mod.rs  response.rs
src-tauri/src/interface/mcp/: helpers.rs  schema.rs
src-tauri/src/policy/: mod.rs
src-tauri/src/search/: mod.rs  runtime.rs
src-tauri/src/service/: activities.rs  approval_helpers.rs  approvals.rs  attachments.rs  context.rs  context_helpers.rs  feedback.rs  mod.rs  overview.rs  pagination.rs  projects.rs  relations.rs  search.rs  search_helpers.rs  shared.rs  sync.rs  sync_helpers.rs  tasks.rs  types.rs  versions.rs  workflow.rs
src-tauri/src/storage/: approvals.rs  attachments.rs  mapping.rs  mod.rs  projects.rs  relations.rs  sync.rs  task_activity.rs  task_helpers.rs  task_search.rs  task_search_index.rs  tasks.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/tauri_app/: mod.rs
src-tauri/tests/: app_integration.rs  approval_flow.rs  error_log.rs  milestone_flow.rs  search_eval.rs  sync_foundation.rs  workspace_regression.rs
src-tauri/tests/fixtures/: search_eval_v011.json
(+76 files in other folders)
