[package]
name = "agenta"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "agenta-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agenta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agenta-desktop"
path = "src/main.rs"

[[bin]]
name = "agenta"
path = "src/bin/agenta.rs"

[[bin]]
name = "agenta-cli"
path = "src/bin/agenta-cli.rs"

[[bin]]
name = "agenta-mcp"
path = "src/bin/agenta-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["mcp-streamable-http"]
mcp-streamable-http = []
mcp-stdio = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
clap = { version = "4.5", features = ["derive"] }
directories = "6"
mime_guess = "2"
axum = "0.8"
rmcp = { version = "1.3.0", default-features = false, features = ["client", "macros", "server", "tower", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "uuid", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
